data/all_generated_tests/raw_wast_tests/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2010.wast
;; 1. **Test Description:** Create a WASM module with a `br_if` in a loop and call an imported function that modifies global state. Check for correct unwinding of the stack when the import function is called.    **Constraint Checked:** Proper stack unwinding and preservation across module boundaries during looping constructs.    **Relation:** Ensures `br_if` correctly handles the state and transitions, preventing stack corruption.

(assert_invalid
  (module
    (func $type-loop-call (loop (call $imported_func) (br_if 0 (i32.const 1)) (i32.const 0)))
    (import "env" "imported_func" (func $imported_func))
  )
  "type mismatch"
)